# chat2go-agent

./: .env.example  .gitignore  README.md  ai.chat2go.bridge.plist  credentials.yaml.example  pyproject.toml  start.sh
chat2go_agent/: __init__.py  __main__.py  attachments.py  auth.py  bridge.py  config.py  dspy_client.py  memory.py  pricing.py  prompt_builder.py  soul.py
chat2go_agent/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai_compatible.py
chat2go_agent/brains/: __init__.py  builtin.py  hermes.py
chat2go_agent/skills/education/: SKILL.md
chat2go_agent/skills/fitness/: SKILL.md
chat2go_agent/skills/foreign-trade/: SKILL.md
chat2go_agent/skills/medical/: SKILL.md
chat2go_agent/skills/quant/: SKILL.md
chat2go_agent/skills/real-estate/: SKILL.md
chat2go_agent/templates/: SOUL.md.example
hermes_plugin/: README.md  chat2go.py
hermes_plugin/patches/: hermes-platform-chat2go.patch
tests/: test_brains.py  test_pricing.py  test_smoke.py
