[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chat2go-agent"
version = "0.1.0"
description = "Chat2GO 本地 Agent —— 大咖在自己电脑跑，把 Claude/OpenAI/Gemini 等模型接入 Chat2GO 调试室"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chat2GO" }]
dependencies = [
    "supabase>=2.9",
    "httpx>=0.27",
    "certifi>=2024.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
chat2go-agent = "chat2go_agent.__main__:main"

[tool.setuptools.packages.find]
include = ["chat2go_agent*"]

[tool.setuptools.package-data]
chat2go_agent = ["skills/**/*.md", "templates/*.md"]
